[package]
name = "egui-todo-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.24.1"
env_logger = { version = "0.10.1", default-features = false, features = [
    "auto-color",
    "humantime",
] }
egui_extras = "0.24.2"
egui = "0.24.1"